--- a/.gitignore
+++ b/.gitignore
@@ -6,24 +6,12 @@ __pycache__
 raw_data
 plot
 result
-getInputData.m
-getInputDataMultipleReferenceYears.m
-getInputDataMultipleReferenceYearsSingleOutput.m
-scenarioTree.pdf
-runcommand.txt
 runCluster.py
-ph_solution.json
-EMPRISE_TODO.txt
-test.bash
 batchjob_emprise
 runcommand.bat
 runClusterNew.py
 jobCreation.py
 test.py
-dos2unix.exe
-.vscode/launch.json
-.vscode/tasks.json
-EMPRISE_TODO.txt
 INV.csv
 multiperiod_investment.py
 multiperiod_investment_backup_20200820.py
@@ -31,3 +19,10 @@ test_altair.py
 bar_text_altair.py
 test_plot.py
 test_plot_altair.py
+*.bash
+*.html
+*.txt
+*.json
+*.m
+*.pdf
+*.exe
